<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World!</string>
	<string name="app_name">RichTextEditor</string>
	<string name="bold">Bold</string>
	<string name="italic">Italic</string>
	<string name="underline">Underline</string>
	<string name="strikethrough">STRIKETHROUGH</string>
	<string name="superscript">SUPERSCRIPT</string>
	<string name="subscript">SUBSCRIPT</string>
	<string name="sans">Sans Serif</string>
	<string name="serif">Serif</string>
	<string name="mono">Monospace</string>
	<string name="effects">Effects</string>
	<string name="fonts">Fonts</string>
	<string name="format">Format</string>

</resources>